--- a/less/styles.less
+++ b/less/styles.less
@@ -5,7 +5,7 @@ body {
     color      : #333;
     min-width  : 1024px;
     max-width  : 1920px;
-    background: url('../img/background.jpg') center no-repeat;
+    background : url('../img/background.jpg') center no-repeat;
 }
 
 
@@ -15,38 +15,12 @@ body {
     box-sizing: border-box;
 }
 
-.intro {
-    overflow: hidden;
-    z-index : -100;
-    height  : auto;
-    width   : 100%;
-    margin  : 0 auto;
-
-    video {
-        top            : 0;
-        left           : 0;
-        width          : 100%;
-        background-size: cover;
-    }
-
-    .intro-title {
-        position: absolute;
-        top: 30%;
-        left: 25%;
-        z-index: 2;
-        font-size: 100px;
-        font-weight: bold;
-        color: #ff3f3f
-    }
-}
-
-
 .header {
     position        : fixed;
     background-color: #64646438;
     width           : 100%;
-    height: 50px;
-    overflow: hidden;
+    height          : 70px;
+    overflow        : hidden;
     display         : flex;
     justify-content : space-between;
     align-items     : center;
@@ -66,9 +40,8 @@ body {
     }
 
     .logo-title {
-        margin-left     : 20px;
-        // margin-bottom: 50px;
-        vertical-align  : 30%
+        margin-left   : 20px;
+        vertical-align: 30%
     }
 
     .login-form {
@@ -81,17 +54,56 @@ body {
     }
 }
 
-.steps {
-    margin: 20px 30px;
-    display: flex;
+.intro {
+    overflow: hidden;
+    z-index : -100;
+    height  : auto;
+    width   : 100%;
+    margin  : 0 auto;
+
+    video {
+        top            : 0;
+        left           : 0;
+        width          : 100%;
+        background-size: cover;
+    }
+
+}
+
+.container {
+    width          : 80%;
+    margin         : 0 auto;
+    display        : flex;
     justify-content: space-between;
-    align-items: center;
-    width: 50%;
+}
+
+.hello {
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    z-index : 2;
+
+    .hello-title {
+        top        : 30%;
+        left       : 25%;
+        font-size  : 100px;
+        font-weight: bold;
+        color      : #ff3f3f
+    }
+
     .step-container {
-        left: 50%;
+        left      : 50%;
+        text-align: center;
+        top       : 50%;
+
         .step-title {
-            color: #af0f0f;
-            font-size: 75px;
+            color    : #af0f0f;
+            font-size: 45px;
+            margin-bottom: 20px;
+        }
+
+        img {
+            width: 150px;
         }
     }
 }
