--- a/css/styles.css
+++ b/css/styles.css
@@ -12,33 +12,11 @@ body {
 *::before {
   box-sizing: border-box;
 }
-.intro {
-  overflow: hidden;
-  z-index: -100;
-  height: auto;
-  width: 100%;
-  margin: 0 auto;
-}
-.intro video {
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-size: cover;
-}
-.intro .intro-title {
-  position: absolute;
-  top: 30%;
-  left: 25%;
-  z-index: 2;
-  font-size: 100px;
-  font-weight: bold;
-  color: #ff3f3f;
-}
 .header {
   position: fixed;
   background-color: #64646438;
   width: 100%;
-  height: 50px;
+  height: 70px;
   overflow: hidden;
   display: flex;
   justify-content: space-between;
@@ -67,17 +45,48 @@ body {
   display: inline-block;
   margin: 0 10px;
 }
-.steps {
-  margin: 20px 30px;
+.intro {
+  overflow: hidden;
+  z-index: -100;
+  height: auto;
+  width: 100%;
+  margin: 0 auto;
+}
+.intro video {
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-size: cover;
+}
+.container {
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 50%;
 }
-.steps .step-container {
+.hello {
+  position: absolute;
+  top: 20%;
+  left: 25%;
+  z-index: 2;
+}
+.hello .hello-title {
+  top: 30%;
+  left: 25%;
+  font-size: 100px;
+  font-weight: bold;
+  color: #ff3f3f;
+}
+.hello .step-container {
   left: 50%;
+  text-align: center;
+  top: 50%;
 }
-.steps .step-container .step-title {
+.hello .step-container .step-title {
   color: #af0f0f;
-  font-size: 75px;
+  font-size: 45px;
+  margin-bottom: 20px;
+}
+.hello .step-container img {
+  width: 150px;
 }
